# igreja

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
apps/account/: admin.py  apps.py  managers.py  models.py  serializers.py
apps/account/migrations/: 0001_initial.py  0002_address_maps_frame.py  0002_alter_address_options_alter_address_address_type_and_more.py  0003_alter_address_table.py  0003_remove_address_maps_frame.py  0004_customuser_username.py
apps/api/: routers.py  urls.py  views.py
apps/api/serializers/: blog.py  user.py
apps/blog/: admin.py  models.py  serializers.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_alter_category_options_alter_post_options_and_more.py  0002_initial.py  0003_reviews_review_by.py  0004_post_test_post_visualizations.py  0004_reviews_title_alter_reviews_comment.py  0005_alter_reviews_review_date.py  0006_category_order.py  0007_alter_category_options_category_active.py
apps/church/: admin.py  apps.py  models.py  routers.py  serializers.py  serilaizers.py  urls.py  views.py
apps/church/migrations/: 0001_initial.py  0002_church_is_default.py  0002_initial.py  0002_rename_membrertype_membertype.py  0003_alter_member_options_alter_membertype_table.py  0004_alter_church_address_alter_church_code_and_more.py  0005_remove_church_members_member_church.py
apps/config/: admin.py  models.py  routers.py  serializers.py  views.py
apps/core/: models.py  pagination.py  utils.py
igreja/: asgi.py  settings.py  urls.py  wsgi.py
igreja/apps/api/: apps.py  (+3 more)
scripts/: duplicate_publications.py
templates/: index.html
(+80 files in other folders)
