[tool.poetry]
name = "igreja - IBM"
version = "0.1.0"
description = ""
authors = ["Danilo da Conceição Nascimento <daconnas.dcn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-registration = "^3.2"
Django = "^4.0.3"
django-model-utils = "^4.2.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
isort = "^5.10.1"
black = "^22.1.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
